--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h5 class="h5">Music & Orchestra Production</h5>
         <p>MIDI mock-up orchestrator using Spitfire and East West libraries.</p>
         <h5 class="h5">Sound Design</h5>
-        <p>Created original sample libraries for sound design, knowledge of C, C++, C#, Python, Middleware: Wwise, Fmod studio.</p>
+        <p>Created original sample libraries for sound design, knowledge of C, C++, C#, Python, Adobe Suite, Middleware: Wwise, Fmod studio.</p>
         <h1>Soft Skills</h1>
         <div class="btn-toolbar">
           <button class="btn btn-outline-primary btn-sm" type="submit">Ability to work under pressure</button>
